DayAndNight <script>작성

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a></span>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -66,7 +66,7 @@
             <span class="text-primary">OK</span>
           </h1>
           <div class="subheading mb-5">E-mail adress
-            <a href="mailto:name@email.com">cndrhs107@gmail.com</a>
+            <a href="mailto:name@email.com"> cndrhs107@gmail.com</a>
           </div>
           <p class="mb-5"> 어떤 역경과 고난에도 굴하지 않고 해내겠습니다.</p>
           <ul class="list-inline list-social-icons mb-0">
@@ -79,15 +79,11 @@
               </a>
             </li>
              <li class="list-inline-item">
-              <button onclick= "document.querySelector('body').style.backgroundColor='black';
-                                document.querySelector('body').style.color='white';
-                                document.querySelector('.DayAndNightAdjColor').style.color='white';">night</button>
+              <button onclick= "changeColor('night');">night</button>
 
             </li>
               <li class="list-inline-item">
-                <button onclick= "document.querySelector('body').style.backgroundColor='white';
-                                  document.querySelector('body').style.color='black';
-                                  document.querySelector('.DayAndNightAdjColor').style.color='#343a40';">day</button>
+                <button onclick="changeColor('day');">day</button>
             </li>
           </ul>
         </div>
@@ -95,7 +91,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5"><span class = "DayAndNightAdjColor";>Experience</span></h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -209,6 +205,27 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+
+    <script>
+      function changeColor(input){
+        //input이 뭘로 들어가냐에 따라 실행되는 코드가 달라진다.
+         if(input == 'day'){
+         document.querySelector('body').style.backgroundColor='white';
+         document.querySelector('body').style.color='#868e96 ';
+         var y = document.getElementsByClassName('DayAndNightAdjColor');
+         for(i = 0; i < y.length; i++){
+           y[i].style.color = 'black';
+         }
+       } else if(input == 'night'){
+         document.querySelector('body').style.backgroundColor='black';
+         document.querySelector('body').style.color='white';
+         var x = document.getElementsByClassName('DayAndNightAdjColor');
+         for(i = 0; i < x.length; i++){
+           x[i].style.color = 'white';
+         }
+       }
+     }
+    </script>
 
   </body>
 
