--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
          document.querySelector('body').style.color='#868e96 ';
          var y = document.getElementsByClassName('DayAndNightAdjColor');
          for(i = 0; i < y.length; i++){
-           y[i].style.color = 'black';
+           y[i].style.color = '#343a40';
          }
        } else if(input == 'night'){
          document.querySelector('body').style.backgroundColor='black';
